# Virtual_paint_opencv

./: CMakeLists.txt  README.md  virtualPaint.cpp
